added debian section

--- a/FAQ.mw
+++ b/FAQ.mw
@@ -315,6 +315,16 @@ and enable it editing the <tt>/usr/share/themes/Moko/gtk-2.0/gtkrc</tt> adding t
 
 You shouldn't even need to restart the device, although you will need to restart any GTK-based programs.
 
+==Debian==
+
+===How do I install Debian on the Neo FreeRunner?===
+
+See [[Debian#Installation|Debian Installation]]
+
+===Any known issues with Debian on the Neo FreeRunner?===
+
+See [[Debian#Known_Issues|Debian Known Issues]]
+
 == Distribution Customization ==
 
 === Compilation & packaging ===
