/* Any known issues with Debian on the Neo FreeRunner? */

--- a/FAQ.mw
+++ b/FAQ.mw
@@ -325,7 +325,7 @@ See [[Debian#Installation|Debian Installation]]
 
 See [[Debian#Known_Issues|Debian Known Issues]]
 
-===How do I replace the matchbox window manager with the xfce window manager?
+===How do I replace the matchbox window manager with the xfce window manager?===
 
 Replace the matchbox-wm line in zhone-session with xfwm4 to start the xfce-wm (file location to be added.)
 
