--- a/Download.mw
+++ b/Download.mw
@@ -17,20 +17,43 @@ If you want to install a system to a microSD card, see [[Booting from SD]].
 These images are based on the branch ''org.openmoko.asu.stable''. They are the ASU distribution. Sorry, there are no build for the Neo 1973 yet, only the FreeRunner. While the branch name ends with ''.stable'', repositories are updated daily. In an ideal world there would never be any regressions and the quality of builds would improve every day. We are not in an ideal world.
 The content of these images is presented at: {{Main|Om 2008.8}}
 
-To flash from scratch, download the current image from:
-http://downloads.openmoko.org/releases/Om2008.8-update/
-* Root FS images are like: Om2008.8-gta02-YYYYMMDD.rootfs.jffs2
-* Kernel images are like:  Om2008.8-gta02-YYYYMMDD.uImage.bin
+There are two sources, depending on whether you are an end user or a developer. In both cases, the files you want are of the form:
+:Om2008.8-gta02-YYYYMMDD.rootfs.jffs2 (root file system)
+:Om2008.8-gta02-YYYYMMDD.uImage.bin (kernel image)
 
+====End user====
+If you want to install stable software, and only get stable updates,  
+the latest stable image (will overwrite all data on your phone) can be  
+found at:
+:http://downloads.openmoko.org/releases/Om2008.8-update/
+If you update packages in this image, they will come from the stable  
+repository (updated daily from Holger's stable branch) at:
+:http://downloads.openmoko.org/repository/Om2008.8/
+Holger (zecke) will continue to cherry-pick bug fixes with the right  
+risk/reward ratio into his stable branch.
+
+====Developer====
+If you want bleeding edge, we have created an image that only contains Settings application and Installer, nothing else. We call it 'base  
+image'. You can find this base image, updated daily, at:
+:http://downloads.openmoko.org/daily/
+By default, this image will fetch updates packages from our 'testing'  
+repository:
+:http://downloads.openmoko.org/repository/testing/
+If you want even more fun, change the package repository to  
+'unstable', which will then fetch updates from:
+:http://downloads.openmoko.org/repository/unstable/
+
+Once you have this base image, you can install the GTK+ telephony apps  
+including gsmd, or Qtopia, or Mickey's framework.
+
+====First Om 2008.8 release (historical)====
 The first Om 2008.8 release was made on 8/8/08 and is still available for historical purposes at:
-http://downloads.openmoko.org/releases/Om2008.8/
-* Root FS files are like: Om2008.8-gta02-20080808.rootfs.jffs2 
-* Kernel files are like:  Om2008.8-gta02-20080808.uImage.bin
-
-Both these images pull updated packages from:
-http://downloads.openmoko.org/repository/Om2008.8/om-gta02/
-
-Reference: See [http://lists.openmoko.org/pipermail/community/2008-August/027997.html announcement]).
+:http://downloads.openmoko.org/releases/Om2008.8/
+The files you want are:
+: Om2008.8-gta02-20080808.rootfs.jffs2 
+:  Om2008.8-gta02-20080808.uImage.bin
+This image fetches updated packages from:
+:http://downloads.openmoko.org/repository/Om2008.8/om-gta02/
 
 === The bleeding edge: Om "base / empty" images ===
 
