/* ASU software image */

--- a/FAQ.mw
+++ b/FAQ.mw
@@ -294,7 +294,11 @@ See [[Om_2007.2#Known_Issues|2007.2 Known Issues]]
 
 See [[Om_2007.2#Known_Issues|2007.2 Known Issues]]
 
-== ASU software image ==
+== Official Openmoko image (Om 2008.8, also known as ASU) ==
+
+===Where do I get the latest version of the official Openmoko image, 2008.8 (also known as ASU)?===
+
+See [[Download#Om_2008.8_images_.28ASU.29| download Om 2008.8 images]]
 
 === Why are the buttons in TangoGPS too large? The zoom out is missing! ===
 
