--- a/USB_Networking.mw
+++ b/USB_Networking.mw
@@ -12,9 +12,7 @@ A discussion of this is here http://lists.openmoko.org/pipermail/support/2008-Au
 
 = Simple Manual Linux Configuration =
 
-Try this first.  If it works, then you can add permanent configuration or use more sophisticated setups below:
-
-(as root on your desktop):
+Try this first (as root on your desktop, with FreeRunner attached via USB cable).  If it works, then you can add permanent configuration or use more sophisticated setups below.
 
  iptables -A POSTROUTING -t nat -j MASQUERADE -s 192.168.0.0/24
  sysctl -w net.ipv4.ip_forward=1
