/* OS or Distro Specific & Automatic Configuration */ Added Slackware section

--- a/USB_Networking.mw
+++ b/USB_Networking.mw
@@ -486,6 +486,8 @@ One way to automate all this is to create /etc/conf.d/net.usb0 as follows. It se
         return 0
  }
 
+== Slackware (tested with 12.1) ==
+
 = SSH Extras =
 
 Reportedly, the ssh daemon (dropbear 0.49) on the FreeRunner appears to have a bug when sending the exit status back to the client. From time to time you receive an exit status of 255.
