why gsm firmware update is pointless for freerunner

--- a/FAQ.mw
+++ b/FAQ.mw
@@ -99,12 +99,16 @@ Issues relating to firmware and hardware are in [[Neo_FreeRunner_Hardware_Issues
 
 Note that some issues might involve a combination of hardware and software
 
-=== My FreeRunner won't register to my cellphone network. What should I do? ===
+=== My FreeRunner won't register to my cellphone network. What should I do?===
 
 # Please document your existing SIM card and provider in the table [[FreeRunner_unable_to_work_with_3G_SIM_cards|here]]
 # If the table mentioned above shows any SIM cards known to work with your provider, make note of these numbers
 # Contact your network provider and request a new SIM card. You may wish to print out the table mentioned above and bring it with you to the store.
 # Add your experience with the new SIM card to the table mentioned above
+
+=== I read somewhere that a GSM firmware update is available to fix this problem===
+
+The GSM firmware update is applicable only to the Neo 1973. Any fixes in the update are already implemented in the GSM firmware in the Neo FreeRunner.
 
 === Can the Neo FreeRunner charge when turned off? When suspended? ===
 
