/* How to add a Repository ? */

--- a/Om_2008_Installer.mw
+++ b/Om_2008_Installer.mw
@@ -39,7 +39,7 @@ Adding a repository allows the package manager to install softwares beyond those
 
  opkg url_to_app.ipk
 
-The community-repository is installed by default in [[Om2008.8 | Om 2008.8]]. Others are listed in the [[Users Repositories]] page. To add a feed, create a file named (for example) 'community-repos.conf'  in the directory '/etc/opkg'  containing this line:
+The community-repository is installed by default in [[Om2008.8 | Om 2008.8]]. Others are listed in the [[Users Repositories]] page. To add a feed, create a file named (for example) 'community-repos.conf'  in the directory '/etc/opkg'  containing a src (or src/gz to pull the gzipped package list) directive like:
 
  src community-repos http://downloads.openmoko.org/repository/Multiverse/
 
