--- a/USB_Networking.mw
+++ b/USB_Networking.mw
@@ -488,6 +488,38 @@ One way to automate all this is to create /etc/conf.d/net.usb0 as follows. It se
 
 == Slackware (tested with 12.1) ==
 
+Following is based on [http://www.enricozini.org/2008/tips/autodock-freerunner.html Enrico Zini's solution].
+
+Create a new udev rules file <tt>/etc/udev/rules.d/91-openmoko.rules</tt>:
+
+  SUBSYSTEM=="net", ACTION=="add",    ATTRS{idVendor}=="1457", ATTRS{idProduct}=="5122", RUN+="/etc/openmoko/openmoko-usb $env{INTERFACE} start"
+  SUBSYSTEM=="net", ACTION=="remove", ENV{INTERFACE}=="usb[0-9]", RUN+="/etc/openmoko/openmoko-usb $env{INTERFACE} stop"
+
+Then create the script <tt>/etc/openmoko/openmoko-usb</tt>:
+
+  #!/bin/sh
+  INTERFACE=$1
+  ACTION=$2
+  
+  # udev fails silently when the script fails, e.g. due to commands not
+  # being found
+  PATH=/usr/sbin:/sbin:/usr/bin:/bin
+  
+  case $ACTION in
+      'start')
+        # Put all your setup here
+        ;;
+      'stop')
+        # Put all your tear down here
+        ;;
+      *)
+        echo "Usage: $0 {start|stop}"
+        exit 1
+        ;;
+  esac
+
+The <tt>INTERFACE</tt> will be <tt>usb0</tt> in most cases.
+
 = SSH Extras =
 
 Reportedly, the ssh daemon (dropbear 0.49) on the FreeRunner appears to have a bug when sending the exit status back to the client. From time to time you receive an exit status of 255.
