how to replace keyboard

--- a/FAQ.mw
+++ b/FAQ.mw
@@ -337,6 +337,22 @@ See [[Debian#Known_Issues|Debian Known Issues]]
 
 Replace the matchbox-wm line in zhone-session with xfwm4 to start the xfce-wm (file location to be added.)
 
+The matchbox keyboard may not work (i.e. it won't pop up after  
+key press), possibly because the keyboard is only properly
+attached to matchbox-wm and not xfwm.
+
+You can replace the matchbox keybaord with an alternative (e.g. xvkbd) by, for example,
+editing 
+:/usr/bin/matchbox-keyboard-toggle (it's just a Python script) 
+to  
+open/close xvkbd instead matchbox-keyboard. 
+You can also give xvkbd a - -geometry <width>x<height>+<x>+<y> 
+to tell it where to appear on the  
+screen, e.g. in 
+:/etc/X11/xdm/Xsetup
+say
+:xvkbd -xdm -compact -geometry 480x210+0+430 &
+
 == Distribution Customization ==
 
 === Compilation & packaging ===
