remove specific issues and redirecto to known issues

--- a/FAQ.mw
+++ b/FAQ.mw
@@ -282,7 +282,7 @@ Very probably. MSN is closed source and will only run where Microsoft wants you 
 
 [[Flashing_the_Neo_FreeRunner]]
 
-=== Some vital keys seem to be missing from the keyboard ===
+===Any known issues with the factory installed image on the Neo FreeRunner?===
 
 See [[Om_2007.2#Known_Issues|2007.2 Known Issues]]
 
