--- a/Om_2007.2.mw
+++ b/Om_2007.2.mw
@@ -40,7 +40,7 @@ After your first <tt>opkg upgrade</tt> you should get these signatures.
 
 This happens when the phone goes to sleep after a few minutes. To unfreeze, unplug and replug the USB cable. To stop this from happening, press the Power button to get the Power menu, then choose Power Management: Disabled.
 
-'''My device seems frozen. How do I perform a hard reset? '''
+'''My device is unresponsive. How do I perform a hard reset? '''
 
 For different boot methods, see [[Booting the Neo FreeRunner]].
 
