added pointer to known issues

--- a/Getting_Started_with_your_Neo_FreeRunner.mw
+++ b/Getting_Started_with_your_Neo_FreeRunner.mw
@@ -119,9 +119,11 @@ To plug regular (i.e. without microphone) headphones commonly used to listen to 
 
 When the screen is locked, you should see a Matrix-style green graphic with the Openmoko symbol in the middle of the bottom of the screen along with lock and unlock symbols.  If you drag the Openmoko symbol to the unlock symbol at the top then the screen will become unlocked.
 
-== Navigating menus and applications ==
+==Navigating menus and applications==
 
 ''Note:'' this section describes the interface used by the "2007.2" image, which is the current default image for Openmoko. For some helpful tips on the "2008.8" image see this [[Om_2008.8_Guide]]
+
+Because the software changes so rapidly, you should review the current list of [[Om_2007.2#Known_Issues|known issues]].
 
 ====Today Page====
 
