--- a/Om_2007.2.mw
+++ b/Om_2007.2.mw
@@ -13,7 +13,7 @@ An official announcement was made by Sean Moss-Pultz on August 20:
 
 = Known Issues =
 
-This is only a subset, and some of the bits reported below may have been fixed by stable updates. See [http://docs.openmoko.org/trac/search?q=2007.2 all tickets with 2007.2] in the bug tracker.
+For the very latest status, see [http://docs.openmoko.org/trac/search?q=2007.2 all tickets with 2007.2] in the bug tracker.
 
 '''Missing Esc key'''
 
@@ -43,6 +43,47 @@ This happens when the phone goes to sleep after a few minutes. To unfreeze, unpl
 '''My device is unresponsive. How do I perform a hard reset? '''
 
 For different boot methods, see [[Booting the Neo FreeRunner]].
+
+'''No GUI for controlling sound volume'''
+
+As of this writing, there is no way to adjust the volume from the screen.
+
+For now, run the terminal application or [[USB_Networking|log in via usb]], and run the [[Neo alsamixer]] application. To see all the options, including Mic2, run
+:alsamixer -V all
+The mixer is simpler than it looks. Use the left and right arrow keys to select "headphone" or "PCM" and use the up and down arrow keys to adjust the volume.  You can also adjust your microphone volume with the "mic2" adjustment. Press ESC when finished. Then exit the terminal application or log out of the USB login.
+
+You may need to update configuration files in 
+:/usr/share/openmoko/scenarios/ 
+to make the microphone setting permanent. type
+:alsactl -f ''path-to-statefile'' store
+to do this.
+
+The default files are as follows (in /usr/share/openmoko/scenarios/): 
+:gsmhandset.state
+:gsmheadset.state
+:gsmspeakerout.state
+:headset.state
+:stereoout.state
+
+These correspond to the various Sound Profiles accessible in the Debug Tool under Applications.
+
+To manually restore one of the state files,
+:alsactl -f ''path-to-statefile'' restore
+
+One way to increase the volume of the microphone is to do the following:
+# ssh into your FreeRunner
+# vi /usr/share/openmoko/scenarios/gsmhandset.state
+# search for "Mic2"
+# change to "value 3"
+If people report not being able to hear you when you call, then setting the Mic2 value to 2 or 3 should fix that.
+
+'''Question: I am using headphones but only the right speaker work the left don't work how can I fix this ?'''
+
+This should be set correctly by restoring gsmheadset.state.
+Pull and replug the headset jack to make sure the correct state-file is restored.
+To manually control the switch between Speaker and headset:
+Start alsamixer, scroll along to the right until you find "Amp Spk" and mute it (m), the sound will then come out from both channels of the 
+headphones and not out of the speaker.
 
 = Installing =
 
