--- a/Om_2007.2.mw
+++ b/Om_2007.2.mw
@@ -15,7 +15,7 @@ An official announcement was made by Sean Moss-Pultz on August 20:
 
 For the very latest status, see [http://docs.openmoko.org/trac/search?q=2007.2 all tickets with 2007.2] in the bug tracker.
 
-'''Missing Esc key'''
+==Missing Esc key==
 
 With the default image you can't escape edit mode in vi due to the missing Esc key. You need to [[Switching_Keyboards|install a new on-screen keyboard]], and in order to do this you'll need to [[Getting_Started_with_your_Neo_FreeRunner#Set_up_USB-based_networking_and_update|set up USB networking]] first. You can then SSH into the FreeRunner from your computer and use the keyboard on that computer to edit files in vi. 
 
@@ -23,32 +23,33 @@ Alternative on-screen keyboards feature an escape key.
 
 If you are stuck in vi you can type <tt>:q</tt> or <tt>:q!</tt> to exit without saving, or <tt>ZZ</tt> to save and exit.
 
-'''Missing /, | and > keys'''
+==Missing /, | and > keys==
 
 These keys are missing from the 0 button. This can be fixed by editing <tt>/etc/multitap-pad/im-multipress.conf</tt>, see [[Switching_Keyboards#Fix_Default| this page]], but unfortunately you need vi, or some other editor to do so. Therefore you need to SSH in and [[Getting_Started_with_your_Neo_FreeRunner#Set_up_USB-based_networking_and_update|set up USB networking]] first.
 
 Alternative on-screen keyboards should have these characters.
 
-'''"Signature Check Failed" errors when running `opkg update`'''
+=="Signature Check Failed" errors when running `opkg update`==
 
 The signatures are missing from the repository.
 
 Workaround: If the Packages.gz files are downloading ok you can ignore this error.
 After your first <tt>opkg upgrade</tt> you should get these signatures.
 
-'''The SSH / Dropbear connections over the USB link frequently freezes'''
+==The SSH / Dropbear connections over the USB link frequently freezes==
 
 This happens when the phone goes to sleep after a few minutes. To unfreeze, unplug and replug the USB cable. To stop this from happening, press the Power button to get the Power menu, then choose Power Management: Disabled.
 
-'''My device is unresponsive. How do I perform a hard reset? '''
+==My device is unresponsive. How do I perform a hard reset?==
 
 For different boot methods, see [[Booting the Neo FreeRunner]].
 
-'''No GUI for controlling sound volume'''
+==No GUI for controlling sound volume==
 
 As of this writing, there is no way to adjust the volume from the screen.
 
-For now, run the terminal application or [[USB_Networking|log in via usb]], and run the [[Neo alsamixer]] application. To see all the options, including Mic2, run
+Workaround:
+Run the terminal application or [[USB_Networking|log in via usb]], and run the [[Neo alsamixer]] application. To see all the options, including Mic2, run
 :alsamixer -V all
 The mixer is simpler than it looks. Use the left and right arrow keys to select "headphone" or "PCM" and use the up and down arrow keys to adjust the volume.  You can also adjust your microphone volume with the "mic2" adjustment. Press ESC when finished. Then exit the terminal application or log out of the USB login.
 
