--- a/Neo_FreeRunner_Hardware.mw
+++ b/Neo_FreeRunner_Hardware.mw
@@ -61,7 +61,7 @@ Detailed hardware component selection can be found below.
 *256MB NAND Flash MCP package. 
 
 === Display ===  
-*Topploy VGA ; 2.8” diagonal, 480 x 640 pixels, 16 bit color depth
+*Topploy VGA ; 72.2mm (2.84”) diagonal, 480 x 640 pixels, 16 bit color depth
 *Transmissive display: good readability in high ambient light is essential 
 *White LED backlight.  Required brightness is 200 NIT minimum. 
 *Resistance type touch panel.
