--- a/Main_Page%2Fde.mw
+++ b/Main_Page%2Fde.mw
@@ -57,7 +57,7 @@ Das Ziel von Openmoko ist die Entwicklung der weltweit ersten freien mobilen Pla
 ==<font color=75d806>Unterstützte Hardware</font>==
  [[image:FIC-neo1973 small.jpg|100px|left|frontside]]
 
-Das erste kompllett unterstützte Telefon ist [[Neo1973]]. Neo1973 GTA01 (Version: Bv4) welches am 9. Juli 2007 erschien und ausschließlich im [https://direct.openmoko.com/ Openmoko Onlineshop] zu kaufen war.
+Das erste kompllett unterstützte Telefon ist [[Neo1973]]. Neo1973 GTA01 (Version: Bv4) welches am 9. Juli 2007 erschien und ausschließlich im [http://us.direct.openmoko.com/ Openmoko Onlineshop] zu kaufen war.
 Am 11.02.2008 war es ausverkauft.
 
 Der Neo FreeRunner (GTA02) wurde inzwischen auch ausgeliefert. Die deutschen Augustlieferungen sind wohl auch schon ausverkauft.
