--- a/Main_Page.mw
+++ b/Main_Page.mw
@@ -51,7 +51,7 @@ The Openmoko stack, which includes a full X server, allows users and developers 
 ===<font color=white>Distributions</font>===
 * [[Distributions|Features comparison table]]
 * [[Om 2008.8|Om 2008.8 (ASU)]] - [[Om 2007.2|Om 2007.2 (old stable)]]
-* [[OpenmokoFramework|FSO]] - [[Qtopia_on_FreeRunner|Qtopia]] - [[Debian|Debian]]
+* [[OpenmokoFramework|FSO]] - [[Qtopia_on_FreeRunner|Qtopia]] - [[Debian|Debian]] - [[Gentoo|Gentoo]]
 
 ===<font color=white>Openmoko community</font>===
 * [[Discussion_Forums| Discussion Forums]]
