/* How to change the keyboards layout ? */

--- a/Keyboard_Debate.mw
+++ b/Keyboard_Debate.mw
@@ -78,8 +78,12 @@ Warning: Even when you install another keyboard, if you do not turn off the Qtop
 
 TBD
 
-For illume: Install ''illume-keyboard-terminal'' package :) they are all recommended ones
+==== illume ====
+
+Install ''illume-keyboard-terminal'' package :) they are all recommended ones
 for illume.
+
+[http://tg.x-net.hu/openmoko/keyboards/ dvorak layout]
 
 === How to change the dictionary used by the predictive keyboards ? ===
 
