*Empty MediaWiki Message*

--- a/Openmoko_Local_Groups:_Boston.mw
+++ b/Openmoko_Local_Groups:_Boston.mw
@@ -1,15 +1,10 @@
-I've got a debug-board if anyone bricks their neo and needs
-to borrow it.   It took me nearly five days to make
-my first phone call!  I've got all the cross-development stuff
-working decently.  Ken Young, kyoung@cfa.harvard.edu)
 
-Trying to get the Neo on NEU campus ([[User:Compbrain|Will N]] <wan@nospamzplz.ccs.neu.edu>)
+I moved all the content from a year ago to [[Openmoko Local Groups: Boston/old]].
 
-Yeah, I was pleasantly surprised to see at least four of the first 500 phones are coming to Boston.<br>
-Like Cindy M, I sure wish I'd gone for faster shipping! -erik ([[User:Snowbiker|snowbiker]] at gmail)
+== Boston Freerunner Users! ==
 
-Yay! Mine came a day early. I have it booted, networked over usb, can dial out but no sound yet :) ([[User:Cindy M|Cindy]] at mottershead.us)
+There are eight of us, in Downtown Boston with a Freerunner. Of the 8, six of us are likely to do some hacking on it. Currently, 6 phones are running Qtopia, and two phones are running whatever comes out of the box, but likely to be flashed with Qtopia next week.
 
-Cindy: http://wiki.openmoko.org/wiki/Getting_Started_with_your_Neo1973#Using_Audio and/or, launch alsamixer from the console, use the lowercase keyboard to navigate and un-mute the amp pauric at pauric.net
+Would other Freerunner users in the area be interested in a meetup? We have a conference room in our office and the ability to make large cups of reasonable tasting coffee.
 
 [[Category:Openmoko Local Groups]]
