Added another user

--- a/Openmoko_Local_Groups:_Boston.mw
+++ b/Openmoko_Local_Groups:_Boston.mw
@@ -1,4 +1,3 @@
-
 I moved all the content from a year ago to [[Openmoko Local Groups: Boston/old]].
 
 == Boston Freerunner Users! ==
@@ -6,5 +5,8 @@ I moved all the content from a year ago to [[Openmoko Local Groups: Boston/old]]
 There are eight of us, in Downtown Boston with a Freerunner. Of the 8, six of us are likely to do some hacking on it. Currently, 6 phones are running Qtopia, and two phones are running whatever comes out of the box, but likely to be flashed with Qtopia next week.
 
 Would other Freerunner users in the area be interested in a meetup? We have a conference room in our office and the ability to make large cups of reasonable tasting coffee.
+
+I've got a Freerunner, and a neo1973, in Cambridge,
+and have written some code for them.   I run 2007.2 on the neo1973, and 2008.8 on the FR, but will probably switch to FSO soon.  I think a meetup would be fun.
 
 [[Category:Openmoko Local Groups]]
