*Empty MediaWiki Message*

--- a/Openmoko_Wiki_Official_Index_Page.mw
+++ b/Openmoko_Wiki_Official_Index_Page.mw
@@ -294,6 +294,7 @@ __NOTOC__
 *[[Boot from sd card]]
 *[[Charging battery directly]]
 ====Software Documentation====
+*[[Import Vcf Contacts]]
 *[[Keyboard Toggle]]
 *[[Neo FreeRunner GPS Software Fix Test Report]]
 *[[Keyboard Debate]]
