*Empty MediaWiki Message*

--- a/Openmoko_Wiki_Official_Index_Page.mw
+++ b/Openmoko_Wiki_Official_Index_Page.mw
@@ -399,7 +399,7 @@ __NOTOC__
 *[[Wishlist:Silent mode timeout]]
 *[[Wishlist:Graphics Tablet]]
 *[[Student phone]]
-*[[Wishlist:3D Viewport]]
+*[[Wishlist/3D Viewport]]
 *[[Answering Machine]]
 *[[Mebot]]
 *[[Proposal for context management]]
