*Empty MediaWiki Message*

--- a/Openmoko_Wiki_Official_Index_Page.mw
+++ b/Openmoko_Wiki_Official_Index_Page.mw
@@ -381,7 +381,7 @@ __NOTOC__
 *[[Wishlist:Unlikely]]
 *[[Wishlist:Accessories]]
 *[[Wishlist:Expansion]]
-*[[Wishlist:Auto Align Map]]
+*[[Wishlist/Auto Align Map]]
 *[[Wishlist:LiveUSB distro]]
 *[[Hardware:NearlyTouchScreen]]
 *[[Modular phone]]
