*Empty MediaWiki Message*

--- a/Openmoko_Wiki_Official_Index_Page.mw
+++ b/Openmoko_Wiki_Official_Index_Page.mw
@@ -382,7 +382,7 @@ __NOTOC__
 *[[Wishlist:Accessories]]
 *[[Wishlist:Expansion]]
 *[[Wishlist/Auto Align Map]]
-*[[Wishlist:LiveUSB distro]]
+*[[Wishlist/LiveUSB distro]]
 *[[Hardware:NearlyTouchScreen]]
 *[[Modular phone]]
 *[[Digital Television]]
@@ -392,12 +392,12 @@ __NOTOC__
 ! style="background:#ffffff;border-left:1px solid #ffffff;border-right:1px ; border-top:2px solid 75d806; border:1px solid #ffffff; width:50% " align=left|
 ===Software Ideas===
 *[[Wishlist:Data Traffic Monitor]]
-*[[Wishlist:Extension Framework]]
+*[[Wishlist/Extension Framework]]
 *[[Wishlist:NeoMidiTracker]]
 *[[Wishlist:NeoWhistle]]
-*[[Wishlist:Human screening]]
-*[[Wishlist:Silent mode timeout]]
-*[[Wishlist:Graphics Tablet]]
+*[[Wishlist/Human screening]]
+*[[Wishlist/Silent mode timeout]]
+*[[Wishlist/Graphics Tablet]]
 *[[Student phone]]
 *[[Wishlist/3D Viewport]]
 *[[Answering Machine]]
