--- a/Wiki_Issues.mw
+++ b/Wiki_Issues.mw
@@ -65,6 +65,7 @@ This page is for perchase Neo 1973, outdated. I deleted already.
 
 * [[Special:Lonelypages]] - Orphaned pages
 * [[Special:DoubleRedirects]] - Pages that redirect to a redirected page
+:I had already clean up this. [[User:Coolcat|coolcat]]
 * [[Special:Popularpages]] - Pages that get viewed a lot
 * [[Special:Ancientpages]] - Old pages
 * [[Special:Newpages]] - New pages
