--- a/Supported_microSD_cards.mw
+++ b/Supported_microSD_cards.mw
@@ -1,8 +1,8 @@
-The Neo FreeRunner supports up to 8GB SDHC (Secure Digital High Capacity) cards. 
+There are a plethora of Transflash / microSD / SDHC (Secure Digital High Capacity) cards out there.
 
-There are a plethora of Transflash / microSD cards out there.
+The Neo FreeRunner supports up to 8GB SDHC cards.
 
-Some cards appear to be too slow to work with the current default settings of the glamo driver, so some specific parameters must be set in uboot to use them (see https://docs.openmoko.org/trac/ticket/1743, and corresponding notes in the tables bellow).
+Some microSD cards appear to be too slow to work with the current default settings of the glamo driver, so some specific parameters must be set in uboot to use them (see https://docs.openmoko.org/trac/ticket/1743, and corresponding notes in the tables bellow).
 
 There had been a [http://bugzilla.openmoko.org/cgi-bin/bugzilla/show_bug.cgi?id=677 bug] in the SD device driver (s3cmci) which caused some trouble. Please make sure you use a recent kernel which applies our kernel patchset rev2832 or higher.
 
