/* How to change the dictionary used by the predictive keyboards ? */ Link to de_DE wordsfile

--- a/Keyboard_Debate.mw
+++ b/Keyboard_Debate.mw
@@ -89,6 +89,15 @@ for illume.
 
 The dictionary for the "standard" (qtopia) predictive keyboard is stored in ''/opt/Qtopia/etc/dict/<LANG>/words.dawg''. To change it, compile with ''dawgen'' an ispell dictionary (list of words) and replace the en-US words file. You can find an x86 binary ''dawgen'' executable  [http://www.3v1n0.net/openmoko/qtopia-italian-keyboard.tar.bz2 here].
 
+Another user suggested:
+
+ cp the en_EN directory to _en_EN
+ mv en_EN to de_DE
+ ln de_De to en_EN
+ replace de_DE/words.dwag with:
+
+A German list of words [http://www.file-upload.net/download-1088244/words.dwag.html here].
+
 For illume: TBD
 
 Matchbox has no predictive mode (to be confirmed ?).
