/* How to change the dictionary used by the predictive keyboards ? */ fix linebreak

--- a/Keyboard_Debate.mw
+++ b/Keyboard_Debate.mw
@@ -94,9 +94,8 @@ Another user suggested:
  cp the en_EN directory to _en_EN
  mv en_EN to de_DE
  ln de_De to en_EN
- replace de_DE/words.dwag with:
-
-A German list of words [http://www.file-upload.net/download-1088244/words.dwag.html here].
+ replace de_DE/words.dwag with the German list of words [http://www.file-upload.net/download-1088244/words.dwag.html here].
+ restart X
 
 For illume: TBD
 
