/* How to change the dictionary used by the predictive keyboards ? */ Add "Illume kbd learns" from Raster's post on community-ML today

--- a/Keyboard_Debate.mw
+++ b/Keyboard_Debate.mw
@@ -97,7 +97,7 @@ Another user suggested:
  replace de_DE/words.dwag with the German list of words [http://www.file-upload.net/download-1088244/words.dwag.html here].
  restart X
 
-For illume: TBD
+For illume: TBD. The Terminal layout has an empty dictionary. The words you type are entered automatically in the dictionary.
 
 Matchbox has no predictive mode (to be confirmed ?).
 
