*Empty MediaWiki Message*

--- a/Openmoko_Wiki_Official_Index_Page.mw
+++ b/Openmoko_Wiki_Official_Index_Page.mw
@@ -294,6 +294,7 @@ __NOTOC__
 *[[Boot from sd card]]
 *[[Charging battery directly]]
 ====Software Documentation====
+*[[Using the Neo as a Mass storage device]]
 *[[Import Vcf Contacts]]
 *[[Keyboard Toggle]]
 *[[Neo FreeRunner GPS Software Fix Test Report]]
@@ -327,7 +328,7 @@ __NOTOC__
 *[[Automatic emulation in Ubuntu]]
 *[[Boot sound]]
 ! style="background:#ffffff;border-left:1px solid #ffffff;border-right:1px ; border-top:2px solid 75d806; border:1px solid #ffffff; width:50% " align=left|  
-
+*[[Gentoo]]
 *[[Building Gadget USB Module]]
 *[[Forcing fast charge mode]]
 *[[CheckFastCharge-script]]
