*Empty MediaWiki Message*

--- a/FBReader.mw
+++ b/FBReader.mw
@@ -40,3 +40,4 @@ After that, FBReader will fit on screen.
 [[Image:read-book.png|300px]] |
 [[Image:library.png|300px]]
 |}
+[[category:Applications]]
