--- a/Openmoko_Wiki_Official_Index_Page.mw
+++ b/Openmoko_Wiki_Official_Index_Page.mw
@@ -328,6 +328,7 @@ __NOTOC__
 *[[Automatic emulation in Ubuntu]]
 *[[Boot sound]]
 ! style="background:#ffffff;border-left:1px solid #ffffff;border-right:1px ; border-top:2px solid 75d806; border:1px solid #ffffff; width:50% " align=left|  
+*[[CustomizeApplicationIcons]]
 *[[Gentoo]]
 *[[Building Gadget USB Module]]
 *[[Forcing fast charge mode]]
