--- a/Openmoko_Community_Applications.mw
+++ b/Openmoko_Community_Applications.mw
@@ -76,6 +76,22 @@ Any problems with the software below should be reported to the individual softwa
 {{main|GPS applications}}
 
 === Other ===
+{| class="wikitable" cellspacing="2" cellpadding="2" style="padding: 0%; margin:0em 0em 1em 0em; border:1px solid #c0c0c0; background:#eeeeee; width:80%;floating="center"; "
+! style="background:#fcfcfc;border-left:1px solid #9999cc;border-right:1px ; border-top:2px solid 75d806; border:1px solid #999999; width:15% " |
+[[Image:Accelges-Recognize-1.png|150px|center]]
+! style="background:#ffffff;border-left:1px solid #9999cc;border-right:1px ; border-top:2px solid 75d806; border:1px solid #999999; width:85% " align=left|
+
+:'''[[FBReader]]<br>
+:FBReader is a e-book reader program. It can work with txt, fb2, html and other various formats formats (more details). 
+
+:Download here:
+:[http://accelges.googlecode.com/files/accelges_0.1.0-svnr204-r2_armv4t.ipk Gestures]
+
+:Distribution:
+
+|}
+
+
 
 {| class="wikitable" cellspacing="2" cellpadding="2" style="padding: 0%; margin:0em 0em 1em 0em; border:1px solid #c0c0c0; background:#eeeeee; width:80%;floating="center"; "
 ! style="background:#fcfcfc;border-left:1px solid #9999cc;border-right:1px ; border-top:2px solid 75d806; border:1px solid #999999; width:15% " |
