*Empty MediaWiki Message*

--- a/Openmoko_Wiki_Official_Index_Page.mw
+++ b/Openmoko_Wiki_Official_Index_Page.mw
@@ -294,6 +294,7 @@ __NOTOC__
 *[[Boot from sd card]]
 *[[Charging battery directly]]
 ====Software Documentation====
+*[[Tethering]]
 *[[Using the Neo as a Mass storage device]]
 *[[Import Vcf Contacts]]
 *[[Keyboard Toggle]]
