*Empty MediaWiki Message*

--- a/Openmoko_Wiki_Official_Index_Page.mw
+++ b/Openmoko_Wiki_Official_Index_Page.mw
@@ -282,6 +282,7 @@ __NOTOC__
 *[[Bluetooth]]
 *[[GPS]]
 ====Hardware Documentation====
+*[[Specialized USB cables]]
 *[[Supported microSD cards]]
 *[[Neo FreeRunner Memory Mapping]]
 *[[Hardware:AT Commands]]
