--- a/Keyboard_Debate.mw
+++ b/Keyboard_Debate.mw
@@ -58,7 +58,7 @@ Short answer (theoretical): wait until the ''illume-config-illume'' package arri
 
 Detailed answer:
  1. opkg install illume-config (Get the qwerty button if not there yet)
- 2. add "export QTOPIA_NO_VIRTUAL_KEYBOARD=1" in /etc/X11/Xsession.d/89qtopia (Turn off buildin qtopia keyboard)
+ 2. add "export QTOPIA_NO_VIRTUAL_KEYBOARD=1" in /etc/X11/Xsession.d/89qtopia (Turn off builtin qtopia keyboard)
  3. opkg install -force-overwrite install http://downloads.openmoko.org/repository/testing/all/illume-config-illume_0.0+svnr35693-r13_all.ipk
  4. echo 'E_PROFILE="-profile illume"' > /etc/enlightenment/default_profile (Switch to the illume profile from asu)
  5. rm -rf ~/.e/e/config/illume (Purge E's cache)
