/* Installation */  spelling (init,d -> init.d)

--- a/Gentoo.mw
+++ b/Gentoo.mw
@@ -50,7 +50,7 @@ tar -xjpf /media/card/portage-*.tar.bz2 -C /media/card/usr
 :<tt>e.g.</tt> 
 <pre>
 ln -s /etc/init.d/net.lo /etc/init.d/net.usb0
-echo "config_usb0=( \"192.168.0.202 netmask 255.255.255.0\" )" > /etc/conf,d/net
+echo "config_usb0=( \"192.168.0.202 netmask 255.255.255.0\" )" > /etc/conf.d/net
 echo "routes_usb0=\"default via 192.168.0.200\"" >> /etc/conf.d/net
 echo "nameserver 192.168.0.200" > /etc/resolv.conf
 </pre>
@@ -65,7 +65,6 @@ echo "nameserver 192.168.0.200" > /etc/resolv.conf
 *Setup uboot for booting from sd card
 *Reboot
 *Setup/emerge rest of the system
-
 
 == Emerging binary packages ==
 *Add PORTAGE_BINHOST to make.conf
