--- a/Wiki_statistic_numbers.mw
+++ b/Wiki_statistic_numbers.mw
@@ -14,6 +14,7 @@ Period :1 July, 2008~31 July, 2008
 *[[Media:Keyword.pdf|Search Keyword]]
 *[[Media:Exitpage.pdf|Top leaving pages]]
 
-
+==June, 2008==
+Period :1 June, 2008~30 June, 2008
 
 [[Category:Community]]
