--- a/Wiki_statistic_numbers.mw
+++ b/Wiki_statistic_numbers.mw
@@ -16,5 +16,7 @@ Period :1 July, 2008~31 July, 2008
 
 ==June, 2008==
 Period :1 June, 2008~30 June, 2008
-[[Media:Analytics wiki-1-.openmoko.org 200806 (DashboardReport).pdf]]
+
+[[Media:Analytics wiki-1-.openmoko.org 200806 (DashboardReport).pdf|DashboardReport]]
+[[Media:Analytics wiki-1-.openmoko.org 200806 (TopContentReport).pdf|Top 250 Content]]
 [[Category:Community]]
