--- a/Wiki_statistic_numbers.mw
+++ b/Wiki_statistic_numbers.mw
@@ -19,4 +19,5 @@ Period :1 June, 2008~30 June, 2008
 
 [[Media:Analytics wiki-1-.openmoko.org 200806 (DashboardReport).pdf|DashboardReport]]
 [[Media:Analytics wiki-1-.openmoko.org 200806 (TopContentReport).pdf|Top 250 Content]]
+[[Media:Analytics wiki-1-.openmoko.org 200806 (KeywordsReport).pdf|Keyword Report]]
 [[Category:Community]]
