/* Installation on Debian */

--- a/Edje.mw
+++ b/Edje.mw
@@ -27,6 +27,8 @@ After that you can install the needed tools with:
 The packages for Ubuntu look like they are compatible with debian.
 Verified is: feisty<->lenny
 
+Unfortunately, something seems to be broken in recompiling the edjefiles (reports syntax errors in .edj file)
+
 == Installation on Freerunner ==
 To compile/decompile Edje files directly at your freerunner, you first need to install several packages.
 You need at least ''edje-utils'' which provides the compiler and decompiler tools.
