--- a/Openmoko_Wiki_Official_Index_Page.mw
+++ b/Openmoko_Wiki_Official_Index_Page.mw
@@ -3,7 +3,7 @@ __NOTOC__
 {{todo|Add these articles into corresponding categories, in order to replace this page, with a dynamic category-based one}}
 
 ==Introduction Of Openmoko==
-{| class="wikitable" cellspacing="1" cellpadding="0" style="padding: 0%; margin:0em 0em 1em 0em; border:1px solid #eeeeee; background:#ffffff; width:100%;"
+{| class="wikitable" cellspacing="1" cellpadding="0" style="padding: 0%; margin:0em 0em 1em 0em; border:1px solid #00FFFF; background:#ffffff; width:100%;"
 |-
 ! style="background:#ffffff;border-left:1px solid #ffffff;border-right:1px ; border-top:2px solid 75d806; border:1px solid #ffffff; width:50% " |  
 <div align=left>
@@ -24,9 +24,9 @@ __NOTOC__
 ==Hardware ==
 {{Hardware}}
 ===GTA01===
-{| class="wikitable" cellspacing="1" cellpadding="0" style="padding: 0%; margin:0em 0em 1em 0em; border:1px solid #eeeeee; background:#ffffff; width:100%;"
+{| class="wikitable" cellspacing="1" cellpadding="0" style="padding: 0%; margin:0em 0em 1em 0em; border:1px solid #B1FB17; background:#ffffff; width:100%;"
 |-
-! style="background:#ffffff;border-left:1px solid #9999cc;border-right:1px ; border-top:2px solid 75d806; border:1px solid #ffffff; width:50% " align=left |
+! style="background:#ffffff;border-left:1px solid #9999cc;border-right:1px ; border-top:2px solid 4EE2EC; border:1px solid #ffffff; width:50% " align=left |
 *[[Neo1973]]
 *[[Neo1973 hardware]]
 *[[Disassembling Neo1973]]
@@ -76,7 +76,7 @@ __NOTOC__
 *[[Neo1973 as radio replacement]]
 |}
 ===FreeRunner===
-{| class="wikitable" cellspacing="1" cellpadding="0" style="padding: 0%; margin:0em 0em 1em 0em; border:1px solid #eeeeee; background:#ffffff; width:100%;"
+{| class="wikitable" cellspacing="1" cellpadding="0" style="padding: 0%; margin:0em 0em 1em 0em; border:1px solid #BCE954; background:#ffffff; width:100%;"
 |-
 ! style="background:#ffffff;border-left:1px solid #9999cc;border-right:1px ; border-top:2px solid 75d806; border:1px solid #ffffff; width:50% " align=left |
 
@@ -96,7 +96,7 @@ __NOTOC__
 |}
 
 ==Software==
-{| class="wikitable" cellspacing="1" cellpadding="0" style="padding: 0%; margin:0em 0em 1em 0em; border:1px solid #eeeeee; background:#ffffff; width:100%;"
+{| class="wikitable" cellspacing="1" cellpadding="0" style="padding: 0%; margin:0em 0em 1em 0em; border:1px solid #8EEBEC; background:#ffffff; width:100%;"
 |-
 ! style="background:#ffffff;border-left:1px solid #ffffff;border-right:1px ; border-top:2px solid 75d806; border:1px solid #ffffff; width:50%" align=left |  
 
@@ -122,7 +122,7 @@ __NOTOC__
 
 |}
 ==Application==
-{| class="wikitable" cellspacing="1" cellpadding="0" style="padding: 0%; margin:0em 0em 1em 0em; border:1px solid #eeeeee; background:#ffffff; width:100%;"
+{| class="wikitable" cellspacing="1" cellpadding="0" style="padding: 0%; margin:0em 0em 1em 0em; border:1px solid #78c7c7; background:#ffffff; width:100%;"
 |-
 ! style="background:#ffffff;border-left:1px solid #ffffff;border-right:1px ; border-top:2px solid 75d806; border:1px solid #ffffff; width:50% " align=left |  
 
@@ -185,7 +185,7 @@ __NOTOC__
 * [[Zedlock]]
 
 |}
-{| class="wikitable" cellspacing="1" cellpadding="0" style="padding: 0%; margin:0em 0em 1em 0em; border:1px solid #eeeeee; background:#ffffff; width:100%;"
+{| class="wikitable" cellspacing="1" cellpadding="0" style="padding: 0%; margin:0em 0em 1em 0em; border:1px solid #3B9C9C; background:#ffffff; width:100%;"
 |-
 ! style="background:#ffffff;border-left:1px solid #ffffff;border-right:1px ; border-top:2px solid 75d806; border:1px solid #ffffff; width:50% " align=left |  
 ====[[Distributions]]====
@@ -210,7 +210,7 @@ __NOTOC__
 |}
 
 ==UI Design==
-{| class="wikitable" cellspacing="1" cellpadding="0" style="padding: 0%; margin:0em 0em 1em 0em; border:1px solid #eeeeee; background:#ffffff; width:100%;"
+{| class="wikitable" cellspacing="1" cellpadding="0" style="padding: 0%; margin:0em 0em 1em 0em; border:1px solid #3EA99F; background:#ffffff; width:100%;"
 |-
 ! style="background:#ffffff;border-left:1px solid #ffffff;border-right:1px ; border-top:2px solid 75d806; border:1px solid #ffffff; width:50% " align=left | 
 ===User Interface Guide===
@@ -229,7 +229,7 @@ __NOTOC__
 |}
 
 =Test=
-{| class="wikitable" cellspacing="1" cellpadding="0" style="padding: 0%; margin:0em 0em 1em 0em; border:1px solid #eeeeee; background:#ffffff; width:100%;"
+{| class="wikitable" cellspacing="1" cellpadding="0" style="padding: 0%; margin:0em 0em 1em 0em; border:1px solid #3B9C9C; background:#ffffff; width:100%;"
 |-
 ! style="background:#ffffff;border-left:1px solid #ffffff;border-right:1px ; border-top:2px solid 75d806; border:1px solid #ffffff; width:50% " align=left |  
 === Hardware ===
@@ -374,7 +374,7 @@ __NOTOC__
 
 
 ==Wish List==
-{| class="wikitable" cellspacing="1" cellpadding="0" style="padding: 0%; margin:0em 0em 1em 0em; border:1px solid #eeeeee; background:#ffffff; width:100%;"
+{| class="wikitable" cellspacing="1" cellpadding="0" style="padding: 0%; margin:0em 0em 1em 0em; border:1px solid #6698FF; background:#ffffff; width:100%;"
 |-
 ! style="background:#ffffff;border-left:1px solid #ffffff;border-right:1px ; border-top:2px solid 75d806; border:1px solid #ffffff; width:50% " align=left| 
 ===Hardware Ideas===
