*Empty MediaWiki Message*

--- a/Openmoko_Wiki_Official_Index_Page.mw
+++ b/Openmoko_Wiki_Official_Index_Page.mw
@@ -269,7 +269,7 @@ __NOTOC__
 *[[Test_Openmoko Emulation with chroot image]]
 |}
 ==Technical==
-{| class="wikitable" cellspacing="1" cellpadding="0" style="padding: 0%; margin:0em 0em 1em 0em; border:1px solid #EEEEEE; background:#ffffff; width:100%;"
+{| class="wikitable" cellspacing="1" cellpadding="0" style="padding: 0%; margin:0em 0em 1em 0em; border:1px solid #36AFF; background:#ffffff; width:100%;"
 |-
 ! style="background:#ffffff;border-left:1px solid #ffffff;border-right:1px ; border-top:2px solid 75d806; border:1px solid #ffffff; width:50% " align=left |  
 ==Protocol/Standard==
@@ -415,7 +415,7 @@ __NOTOC__
 
 ==Community & Users==
 
-{| class="wikitable" cellspacing="1" cellpadding="0" style="padding: 0%; margin:0em 0em 1em 0em; border:1px solid #eeeeee; background:#ffffff; width:100%;"
+{| class="wikitable" cellspacing="1" cellpadding="0" style="padding: 0%; margin:0em 0em 1em 0em; border:1px solid #842DCE; background:#ffffff; width:100%;"
 |-
 ! style="background:#ffffff;border-left:1px solid #ffffff;border-right:1px ; border-top:2px solid 75d806; border:1px solid #ffffff; width:50%" align=left| 
 ===Community===
@@ -435,7 +435,7 @@ __NOTOC__
 *[[Discussion Forums]]
 |}
 ==Service==
-{| class="wikitable" cellspacing="1" cellpadding="0" style="padding: 0%; margin:0em 0em 1em 0em; border:1px solid #EEEEEE; background:#ffffff; width:100%;"
+{| class="wikitable" cellspacing="1" cellpadding="0" style="padding: 0%; margin:0em 0em 1em 0em; border:1px solid #C45AEC; background:#ffffff; width:100%;"
 |-
 ! style="background:#ffffff;border-left:1px solid #ffffff;border-right:1px ; border-top:2px solid 75d806; border:1px solid #ffffff; width:50% " align=left | 
 *[[Carriers]]
@@ -459,14 +459,14 @@ __NOTOC__
 ===Provider===
 *[[Neo1973 compatible cellphone providers]]
 |}
-{| class="wikitable" cellspacing="1" cellpadding="0" style="padding: 0%; margin:0em 0em 1em 0em; border:1px solid #eeeeee; background:#ffffff; width:100%;"
+{| class="wikitable" cellspacing="1" cellpadding="0" style="padding: 0%; margin:0em 0em 1em 0em; border:1px solid #893BFF; background:#ffffff; width:100%;"
 |-
 ! style="background:#ffffff;border-left:1px solid #ffffff;border-right:1px ; border-top:2px solid 75d806; border:1px solid #ffffff; width:50% " align=left | 
 ==FAQ==
 *[[FAQ]]
 *[[Neo FreeRunner (GTA02) FAQ]]
 *[[Application Development FAQ]]
-{| class="wikitable" cellspacing="1" cellpadding="0" style="padding: 0%; margin:0em 0em 1em 0em; border:1px solid #eeeeee; background:#ffffff; width:100%;"
+{| class="wikitable" cellspacing="1" cellpadding="0" style="padding: 0%; margin:0em 0em 1em 0em; border:1px solid #8B31C7; background:#ffffff; width:100%;"
 |-
 ! style="background:#ffffff;border-left:1px solid #ffffff;border-right:1px ; border-top:2px solid 75d806; border:1px solid #ffffff; width:50% " align=left|  
 *[[Bug Filing Policy]]
