*Empty MediaWiki Message*

--- a/GentooQEMUBuildBox.mw
+++ b/GentooQEMUBuildBox.mw
@@ -73,6 +73,7 @@ echo 0 > /proc/sys/net/ipv4/ip_forward
 
 *Add "\ init=/bin/bash" to the end of run-qemu-1 just after quiet to get bash to do initial setup and run it
 *<pre>mount -n -o remount,rw /</pre>
+*<pre>source /etc/profiles; env-update</pre>
 *do setup things described in [[Gentoo]]
 *<pre>mknod /dev/ttyAMA0 c 204 64</pre>
 *edit /etc/inittab unhashing s0 and changeing it to ttyAMA0
