--- a/Manuals%2FNeo_FreeRunner%2Fzh_tw.mw
+++ b/Manuals%2FNeo_FreeRunner%2Fzh_tw.mw
@@ -116,11 +116,14 @@ Neo FreeRunner將會開始進入啟動 Openmoko 映像檔。。</td></tr></table
 
 {{note|以下文章中所提供的下載連結非最新的映像檔案。但已經測試驗證為適合使用者使用的穩定版本。}}
 ===Step 1. 下載更新工具===
-Neo FreeRunner需要在更新時進入U-Boot。
+Neo FreeRunner需要在更新時進入U-Boot。所謂的進入U-Boot,就是將FreeRunner的開機畫面,停在U-Boot選單上！確定停在選單上之後,再將 USB Cable 接好！
 
 你可以在下面的位置下載更新工具： 
 
  http://downloads.openmoko.org/releases/FreeRunner/dfu-util
+下載dfu-util之後,記得將權限改成可執行！
+
+＄chmod a+e dfu-util
 
 ===Step 2. 更新 Kernel===
 
@@ -170,6 +173,19 @@ http://downloads.openmoko.org/releases/FreeRunner/
 在Linux 主機上鍵入以下的指令內容：
 
 ./dfu-util -a rootfs -R -D openmoko-devel-image-fic-gta02.jffs2
+
+在更新完成時會出現下面的訊息：
+
+status(0) = No error condition is present
+Done!
+
+===Step 4. 更新 U-Boot ===
+你可以自下面的位址更新root filesystem：
+http://downloads.openmoko.org/releases/FreeRunner/
+
+在Linux 主機上鍵入以下的指令內容：
+
+./dfu-util -a u-boot -R -D gta02v5_and_up-u-boot.bin
 
 在更新完成時會出現下面的訊息：
 
