--- a/Neo_FreeRunner_FAQ.mw
+++ b/Neo_FreeRunner_FAQ.mw
@@ -202,7 +202,10 @@ There is a [https://wiki.evolvis.org/jalimo/index.php/Openmoko port of Jalimo] f
 === Does it support Flash so can I watch YouTube? ===
 You don't really need Flash to watch YouTube videos, for example, if you want to watch www.youtube.com/watch?v=k9QLdK6pFCI just install mplayer and use this command: 
  mplayer http://ytpocket.com/getflv.php?id=k9QLdK6pFCI
-
+or use this small script with the video URL as the first parametre:
+ #!/bin/sh
+ vid=`echo "$1" | sed 's/.*\?.*=\(.*\)/\1/'`
+ mplayer http://ytpocket.com/getflv.php?id=$vid
 === Does it support Ruby? ===
 
 For Ruby 1.9, please refer to http://blog.sparkymat.net/2008/08/10/ruby-19-on-openmoko/
