Made sure the freerunner hardware articles were in its category and changed this article to show the actual category

--- a/Openmoko_Wiki_Official_Index_Page.mw
+++ b/Openmoko_Wiki_Official_Index_Page.mw
@@ -80,19 +80,7 @@ __NOTOC__
 |-
 ! style="background:#ffffff;border-left:1px solid #9999cc;border-right:1px ; border-top:2px solid 75d806; border:1px solid #ffffff; width:50% " align=left |
 
-*[[GTA02 Openness]]
-*[[Neo FreeRunner]]
-*[[Neo FreeRunner GTA02 Hardware]]
-*[[FreeRunner/Buttons and LEDs]]
-*[[Prototypes]]
-*[[GTA02 WLAN]]
-
-! style="background:#ffffff;border-left:1px solid #9999cc;border-right:1px ; border-top:2px solid 75d806; border:1px solid #ffffff; width:50% " align=left |
-
-===Openmoko Custom Build===
-*[[Openmoko-supported hardware]]
-*[[HXD8]]
-*[[Neo1973: GTA01Bv4 versus GTA02 comparison]]
+<categorytree mode=pages>Neo FreeRunner Hardware</categorytree>
 |}
 
 ==Software==
