/* Comparison between Apple iPhone (and iPhone 3G) and the FIC FreeRunner (GTA02) running Openmoko Linux */

--- a/IPhone.mw
+++ b/IPhone.mw
@@ -29,9 +29,8 @@ iPhone UI Demo on youtube http://youtube.com/watch?v=YgW7or1TuFk
  |2.8" 640x480 at 285 ppi, pressure, [http://lists.openmoko.org/pipermail/community/2006-December/000576.html maybe multi-touch later]
  |-
  |Storage
- |8 or 16 GB
- |[http://lists.openmoko.org/pipermail/announce/2007-June/000013.html 256MiByte]
-Unconfirmed expandable with [http://www.techtree.com/India/News/Samsung_Readies_8GB_microSD_Card/551-81172-581.html 8GiByte microSD] or [http://www.sandisk.com/Products/Item(2537)-SDSDQR-8192-A11M-SanDisk_microSDHC_8_GB.aspx Sandisk 8GB microSD]
+ |8 or 16 GB internal
+ |[http://lists.openmoko.org/pipermail/announce/2007-June/000013.html 256MiByte] internal and [[Supported_microSD_cards|confirmed expandable]] with at least some 8GB microSD cards.
  |-
  |CPU
  |[http://www.arm.com/products/CPUs/ARM1176.html ARM1176JZF-S™] @ 650 MHz (with coprocessor) (Source: [http://www.bitsundso.de/ Bits und so Podcast] [http://www.bitsundso.de/bus20/54/ #20], 8'40" to 9'30" [german language])
