--- a/Category_overview.mw
+++ b/Category_overview.mw
@@ -1,17 +1,23 @@
 {| class="wikitable" cellspacing="1" cellpadding="0" style="padding: 0%; margin:0em 0em 1em 0em; border:1px solid #00FFFF; background:#ffffff; width:100%;"
 |-
-! style="background:#ffffff;border-left:1px solid #ffffff;border-right:1px ; border-top:2px solid 75d806; border:1px solid #ffffff; width:50% " |  
-<div align=left>
-*[[Introduction]]
-*[[OpenmokoFramework]]
-*[[OpenmokoFramework/mickeyterm]]
-*[[Current events]]
-</div>
-! style="background:#ffffff;border-left:1px solid #ffffff;border-right:1px ; border-top:2px solid 75d806; border:1px solid #ffffff; width:50% " | 
-<div align=left>
-*[[Trademark Policy]]
-*[[License]]
-*[[Development_resources|Development Resources]]
-*[[WhyOpenmoko]]
-*[[DailyBuiltImages]]
+! style="background:#ffffff;border-left:1px solid #ffffff;border-right:1px ; border-top:2px solid 75d806; border:1px solid #ffffff; width:50% " align=left|  
+==[[:category:Hardware|Hardware]]==
+
+* [[:category:Audio|Audio]]
+* [[:category:Bluetooth|Bluetooth]]
+* [[:category:Chip|Chip]]
+* [[:category:Development Board|Development]]
+* [[:category:Flash|Flash]]
+* [[:category:GPS|GPS]]
+* [[:category:Hardware Support|Support]]
+
+* [[:category:USB|USB]]
+! style="background:#ffffff;border-left:1px solid #ffffff;border-right:1px ; border-top:2px solid 75d806; border:1px solid #ffffff; width:50% " align=left  | 
+** [[:category:GTA02 Hardware|GTA02]]
+** [[:category:Neo1973 Hardware|GTA01]]
+** [[:category:Neo1973 Phase 0 related|Neo1973 Phase 0 related]]
+** [[:category:Neo1973 Phase 1 related|Neo1973 Phase 1 related]]
+** [[:category:Neo1973 Hardware Debugging|Neo1973 Hardware Debugging]]
+** [[:category:Neo1973 alternate cases|Neo1973 alternate cases]]
+** [[:category:Neo1973 and external hardware|Neo1973 and external hardware]]
 |}
