*Empty MediaWiki Message*

--- a/Category_overview.mw
+++ b/Category_overview.mw
@@ -1,3 +1,5 @@
+__NOTOC__
+__NOEDITSECTION__ 
 
 {| class="wikitable" cellspacing="1" cellpadding="0" style="padding: 0%; margin:0em 0em 1em 0em; border:1px solid #00FFFF; background:#ffffff; width:100%;"
 |-
