--- a/Group_sales.mw
+++ b/Group_sales.mw
@@ -417,6 +417,13 @@ Status: 12/10
 * [[User:asbjorn | Asbjørn Sloth Tønnesen]] [http://wiki.openmoko.org/wiki/Special:Emailuser/asbjorn (contact)] (I need 1 with invoice) I has [http://groups.google.com/group/freerunner-order-dk/browse_thread/thread/cd68b49d8520ecd2# offered] to act as hub for group sales from Openmoko and Handheld-Linux.
 * [[User:KlaymenDK | Jan Gundtofte-Bruun]]  [http://wiki.openmoko.org/wiki/Special:Emailuser/KlaymenDK (contact)] -- will wait until software is stable enough to work as primary mobile phone
 
+== Egypt ==
+=== Cairo ===
+==== American University in Cairo ====
+I would like to get a group of 10 AUC student who are into Linux together to buy a block of ten of these. We could also include non-AUC students, expats, and others as well. They can be shipped to the University in el-Tagamoa el-Khamis. Contact me if you are interested for details or other information. I need to find out what the duty on ten phones would be here. --[[User:Paco758|Paco758]] 10:29, 4 September 2008 (UTC)
+
+* [[User:paco758 | paco758 ]] ([mailto:john.d.martin.iii@gmail.com contact]) 
+
 == Estonia ==
 === Tallinn ===
 
