--- a/Group_sales.mw
+++ b/Group_sales.mw
@@ -422,7 +422,7 @@ Status: 12/10
 ==== American University in Cairo ====
 I would like to get a group of 10 AUC student who are into Linux together to buy a block of ten of these. We could also include non-AUC students, expats, and others as well. They can be shipped to the University in el-Tagamoa el-Khamis. Contact me if you are interested for details or other information. I need to find out what the duty on ten phones would be here. --[[User:Paco758|Paco758]] 10:29, 4 September 2008 (UTC)
 
-* [[User:paco758 | paco758 ]] ([mailto:john.d.martin.iii@gmail.com contact]) 
+* [[User:paco758 | paco758 ]] ([mailto:john.d.martin.iii@gmail.com contact]) SMS to 0165585960
 
 == Estonia ==
 === Tallinn ===
