*Empty MediaWiki Message*

--- a/Category_overview.mw
+++ b/Category_overview.mw
@@ -3,23 +3,23 @@ __NOEDITSECTION__
 
 {| class="wikitable" cellspacing="1" cellpadding="0" style="padding: 0%; margin:0em 0em 1em 0em; border:1px solid #ffffff; background:#ffffff; width:100%;"
 |-
-! style="background:#ffffff;border-left:1px solid #ffffff;border-right:1px ; border-top:2px solid 75d806; border:1px solid #ffffff; width:15% " align=left|  [[Image:Ghostbackup.png|100px]]
-! style="background:#ffffff;border-left:1px solid #ffffff;border-right:1px ; border-top:2px solid 75d806; border:1px solid #ffffff; width:35% " align=left|  
+! style="background:#ffffff;border-left:1px solid #ffffff;border-right:1px ; border-top:2px solid 75d806; border:1px solid #ffffff; width:10% " align=left|  [[Image:Ghostbackup.png|100px|left]]
+! style="background:#ffffff;border-left:1px solid #ffffff;border-right:1px ; border-top:2px solid 75d806; border:1px solid #ffffff; width:40% " align=left|  
 ==='''[[:category:Hardware|Hardware]]'''===
-[[:category:Audio|Audio]]．[[:category:Bluetooth|Bluetooth]]．[[:category:Chip|Chip]]．[[:category:Development Board|Development]]．[[:category:Flash|Flash]]．[[:category:GPS|GPS]]
-[[:category:Hardware Support|Support]]．[[:category:USB|USB]]
-----
+[[:category:Audio|Audio]]-[[:category:Bluetooth|Bluetooth]]-[[:category:Chip|Chip]]-[[:category:Development Board|Development]]-[[:category:Flash|Flash]]-[[:category:GPS|GPS]]-
+[[:category:Hardware Support|Support]]-[[:category:USB|USB]]
+<hr>
 ==='''[[:Category:Hardware Support|Support Hardware ]]'''===
-[[:category:GTA02 Hardware|GTA02]]．[[:category:Neo1973 Hardware|GTA01]]．[[:category:Neo1973 Phase 0 related|Neo1973 Phase 0 related]]．[[:category:Neo1973 Phase 1 related|Neo1973 Phase 1 related]]．[[:category:Neo1973 Hardware Debugging|Neo1973 Hardware Debugging]]．[[:category:Neo1973 alternate cases|Neo1973 alternate cases]]． [[:category:Neo1973 and external hardware|Neo1973 and external hardware]]
+[[:category:GTA02 Hardware|GTA02]]-[[:category:Neo1973 Hardware|GTA01]]-[[:category:Neo1973 Phase 0 related|Neo1973 Phase 0 related]]-[[:category:Neo1973 Phase 1 related|Neo1973 Phase 1 related]]-[[:category:Neo1973 Hardware Debugging|Neo1973 Hardware Debugging]]-[[:category:Neo1973 alternate cases|Neo1973 alternate cases]]- [[:category:Neo1973 and external hardware|Neo1973 and external hardware]]
 
-! style="background:#ffffff;border-left:1px solid #ffffff;border-right:1px ; border-top:2px solid 75d806; border:1px solid #ffffff; width:15% " align=left| 
+! style="background:#ffffff;border-left:1px solid #ffffff;border-right:1px ; border-top:2px solid 75d806; border:1px solid #ffffff; width:10% " align=left| 
 
 [[Image:Ghostbackup.png|100px]]
-! style="background:#ffffff;border-left:1px solid #ffffff;border-right:1px ; border-top:2px solid 75d806; border:1px solid #ffffff; width:35% " align=left  | 
+! style="background:#ffffff;border-left:1px solid #ffffff;border-right:1px ; border-top:2px solid 75d806; border:1px solid #ffffff; width:40% " align=left  | 
 ===[[:category:Software|Software]]===
 
 [[:category:Applications|Applications]]．[[:category:Application Developer|Application Developer]]
 ===[[:category:Distributions|Distributions]]===
-[[:category:Angstrom|Angstrom]]． [[:category:Debian|Debian]]．[[:category:FSO|FSO]]．[[:category:Om 2007.2|Om 2007.2]]． [[:category:Om 2008.8|Om 2008.8]]． [[:category:Qtopia|Qtopia]]． [[:category:SHR|SHR]]．[[:category:GPS|GPS]]．[[:category:GSM|GSM]]． [[:category:Kernel|Kernel]]
+[[:category:Angstrom|Angstrom]]-[[:category:Debian|Debian]]-[[:category:FSO|FSO]]-[[:category:Om 2007.2|Om 2007.2]]-[[:category:Om 2008.8|Om 2008.8]]- [[:category:Qtopia|Qtopia]]-[[:category:SHR|SHR]]．[[:category:GPS|GPS]]-[[:category:GSM|GSM]]-[[:category:Kernel|Kernel]]
 
 |}
