--- a/Category_overview.mw
+++ b/Category_overview.mw
@@ -1,7 +1,7 @@
 __NOTOC__
 __NOEDITSECTION__ 
 
-{| class="wikitable" cellspacing="1" cellpadding="0" style="padding: 0%; margin:0em 0em 1em 0em; border:1px solid #ffffff; background:#ffffff; width:100%;"
+{| class="wikitable" cellspacing="1" cellpadding="0" style="padding: 0%; margin:0em 0em 1em 0em; border:1px solid #eeeeee; background:#ffffff; width:100% DASHED;"
 |-
 ! style="background:#ffffff;border-left:1px solid #ffffff;border-right:1px ; border-top:2px solid 75d806; border:1px solid #ffffff; width:10% " align=left|  [[Image:Ghostbackup.png|100px|left]]
 ! style="background:#ffffff;border-left:1px solid #ffffff;border-right:1px ; border-top:2px solid 75d806; border:1px solid #ffffff; width:40% " align=left|  
