--- a/Openmoko_Wiki_Official_Index_Page.mw
+++ b/Openmoko_Wiki_Official_Index_Page.mw
@@ -1,4 +1,3 @@
-
 {{todo|Add these articles into corresponding categories, in order to replace this page, with a dynamic category-based one}}
 
 ==Introduction Of Openmoko==
@@ -364,40 +363,8 @@
 {| class="wikitable" cellspacing="1" cellpadding="0" style="padding: 0%; margin:0em 0em 1em 0em; border:1px solid #6698FF; background:#ffffff; width:100%;"
 |-
 ! style="background:#ffffff;border-left:1px solid #ffffff;border-right:1px ; border-top:2px solid 75d806; border:1px solid #ffffff; width:50% " align=left| 
-===Hardware Ideas===
-*[[Kuai Yi Dian GM519]]
-*[[Wishlist:Expansion Back]]
-*[[Wish List]]
-*[[Wishlist - Hardware - Novel Devices]]
-*[[Wishlist:Unlikely]]
-*[[Wishlist:Accessories]]
-*[[Wishlist:Expansion]]
-*[[Wishlist/Auto Align Map]]
-*[[Wishlist/LiveUSB distro]]
-*[[Hardware:NearlyTouchScreen]]
-*[[Modular phone]]
-*[[Digital Television]]
-===Calling Feature===
-*[[Anti-Theft Mode]]
 
-! style="background:#ffffff;border-left:1px solid #ffffff;border-right:1px ; border-top:2px solid 75d806; border:1px solid #ffffff; width:50% " align=left|
-===Software Ideas===
-*[[Wishlist:Data Traffic Monitor]]
-*[[Wishlist/Extension Framework]]
-*[[Wishlist:NeoMidiTracker]]
-*[[Wishlist:NeoWhistle]]
-*[[Wishlist/Human screening]]
-*[[Wishlist/Silent mode timeout]]
-*[[Wishlist/Graphics Tablet]]
-*[[Student phone]]
-*[[Wishlist/3D Viewport]]
-*[[Answering Machine]]
-*[[Mebot]]
-*[[Proposal for context management]]
-*[[MiLF interface]]
-*[[Wishlist:Software:GPS proxy]]
-*[[Server:WebProxy]]
-
+<categorytree mode=pages>Ideas</categorytree>
 |}
 
 ==Community & Users==
