--- a/Openmoko_Wiki_Official_Index_Page.mw
+++ b/Openmoko_Wiki_Official_Index_Page.mw
@@ -258,12 +258,12 @@
 {| class="wikitable" cellspacing="1" cellpadding="0" style="padding: 0%; margin:0em 0em 1em 0em; border:1px solid #36AFF; background:#ffffff; width:100%;"
 |-
 ! style="background:#ffffff;border-left:1px solid #ffffff;border-right:1px ; border-top:2px solid 75d806; border:1px solid #ffffff; width:50% " align=left |  
-==Protocol/Standard==
-*[[IPv4]]
-*[[GSM]]
+===Protocol===
+<categorytree mode=pages>Protocol</categorytree>
+
+===Standard===
 *[[GSM02.07]]
 *[[GSMPowerDownInitScript]]
-*[[Pppd]]
 *[[DECT]]
 *[[Bluetooth]]
 *[[GPS]]
