--- a/Wiki_Issues.mw
+++ b/Wiki_Issues.mw
@@ -58,7 +58,8 @@ This page is for perchase Neo 1973, outdated. I deleted already.
 |-
 
 |[[ETel]] and [[Talk:ETel]] || is about a past event || [[User:Marko Knöbl|Marko Knöbl]] || [[User:Kempelen|Kempelen]] (moved to Event category that's for past events too)
-
+|-
+|[[Look & Feel]] and [[Look & Feel/de]] || [[Look & Feel]] is now a redirect to [[Artwork]] which is a totally different subject - therefore many links are unintentionally leading to [[Artwork]]|| [[User:Marko Knöbl|Marko Knöbl]]
 |}
 
 === Pages that especially need work === 
