*Empty MediaWiki Message*

--- a/Ringtones.mw
+++ b/Ringtones.mw
@@ -1,4 +1,4 @@
-Currently we are working towards the phase 2 release of the [[Neo1973 Hardware | Neo1973]]. We need freely distributable/licensed ringtones to ship as default ringtones with the phone.  
+We need freely distributable/licensed ringtones to ship as default ringtones with the phone.  
 
 
 == License ==
